modules/gke/argocd/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: ta-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: europe-west1-docker.pkg.dev/thirst-alert/thirst-alert-be/backend
        name: backend
        resources: {}
