modules/gke/argocd/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ta-backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
