modules/gke/argocd/be/be-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: ta-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: europe-west1-docker.pkg.dev/thirst-alert/thirst-alert-be/backend:v1.2.0-dev.5
        name: backend
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ta-backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: ta-backend
spec:
  rules:
  - host: api.thirst-alert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
