modules/gke/argocd/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: ta-backend
  annotations:
    cert-manager.io/cluster-issuer: cert-manager
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.thirst-alert.com
    secretName: cert-manager-private-key
  rules:
  - host: api.thirst-alert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
